--- a/DocumentManagement/MainWindow.xaml
+++ b/DocumentManagement/MainWindow.xaml
@@ -21,7 +21,12 @@
         <Button x:Name="savedbButton" Content="Save" HorizontalAlignment="Left" Margin="140,226,0,0" VerticalAlignment="Top" Visibility="Hidden" Click="savedbButton_Click"/>
         <TextBox x:Name="searchFileTxt" HorizontalAlignment="Left" Margin="10,285,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.311,0.429" Visibility="Hidden"/>
         <Button x:Name="searchFileBtn" Content="Search" HorizontalAlignment="Left" Margin="135,284,0,0" VerticalAlignment="Top" Click="searchFileBtn_Click" Visibility="Hidden"/>
-        <CheckBox x:Name="partialSearch" Content="Partial search&#x9;" HorizontalAlignment="Left" Margin="10,256,0,0" VerticalAlignment="Top" Click="partialSearch_Click" Unchecked="partialSearch_Unchecked"/>
+        <CheckBox x:Name="partialSearch" Content="Partial search&#x9;" HorizontalAlignment="Left" Margin="10,256,0,0" VerticalAlignment="Top" Unchecked="partialSearch_Unchecked" Checked="partialSearch_Checked"/>
+        <CheckBox x:Name="searchCdrive" Content="Search from c:\&#x9;" HorizontalAlignment="Left" Margin="119,256,0,0" VerticalAlignment="Top" Checked="searchCdrive_Checked"/>
+        <Label x:Name="selectedItems" Content="" HorizontalAlignment="Left" Margin="420,21,0,0" VerticalAlignment="Top" Width="135"/>
+        <TextBox x:Name="backupInput" HorizontalAlignment="Left" Margin="8,335,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="backupBtn" Content="Backup" HorizontalAlignment="Left" Margin="8,370,0,0" VerticalAlignment="Top" Click="backupBtn_Click"/>
+        <Button x:Name="readBackup" Content="Button" HorizontalAlignment="Left" Margin="66,370,0,0" VerticalAlignment="Top" Click="readBackup_Click"/>
 
 
     </Grid>
