--- a/DocumentManagement/MainWindow.xaml
+++ b/DocumentManagement/MainWindow.xaml
@@ -27,6 +27,7 @@
         <TextBox x:Name="backupInput" HorizontalAlignment="Left" Margin="8,335,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="backupBtn" Content="Backup" HorizontalAlignment="Left" Margin="8,370,0,0" VerticalAlignment="Top" Click="backupBtn_Click"/>
         <Button x:Name="readBackup" Content="Button" HorizontalAlignment="Left" Margin="66,370,0,0" VerticalAlignment="Top" Click="readBackup_Click"/>
+        <ComboBox x:Name="savedFilescb" HorizontalAlignment="Left" Margin="140,335,0,0" VerticalAlignment="Top" Width="120"/>
 
 
     </Grid>
