--- a/DocumentManagement/MainWindow.xaml
+++ b/DocumentManagement/MainWindow.xaml
@@ -24,15 +24,21 @@
         <CheckBox x:Name="partialSearch" Content="Partial search&#x9;" HorizontalAlignment="Left" Margin="10,256,0,0" VerticalAlignment="Top" Unchecked="partialSearch_Unchecked" Checked="partialSearch_Checked"/>
         <CheckBox x:Name="searchCdrive" Content="Search from c:\&#x9;" HorizontalAlignment="Left" Margin="119,256,0,0" VerticalAlignment="Top" Checked="searchCdrive_Checked"/>
         <Label x:Name="selectedItems" Content="" HorizontalAlignment="Left" Margin="420,21,0,0" VerticalAlignment="Top" Width="135"/>
-        <TextBox x:Name="backupInput" HorizontalAlignment="Left" Margin="8,335,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="backupBtn" Content="Backup" HorizontalAlignment="Left" Margin="8,370,0,0" VerticalAlignment="Top" Click="backupBtn_Click"/>
-        <Button x:Name="readBackup" Content="Read" HorizontalAlignment="Left" Margin="66,370,0,0" VerticalAlignment="Top" Click="readBackup_Click"/>
-        <ComboBox x:Name="savedFilescb" HorizontalAlignment="Left" Margin="140,335,0,0" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="backupInput" HorizontalAlignment="Left" Margin="6,380,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="backupBtn" Content="Backup" HorizontalAlignment="Left" Margin="7,404,0,0" VerticalAlignment="Top" Click="backupBtn_Click" RenderTransformOrigin="0.472,0.829"/>
+        <Button x:Name="readBackup" Content="Read" HorizontalAlignment="Left" Margin="68,404,0,0" VerticalAlignment="Top" Click="readBackup_Click"/>
+        <ComboBox x:Name="savedFilescb" HorizontalAlignment="Left" Margin="140,378,0,0" VerticalAlignment="Top" Width="120"/>
         <CheckBox x:Name="metadata" Content="Metadata" HorizontalAlignment="Left" Margin="240,259,0,0" VerticalAlignment="Top" Checked="metadata_Checked"/>
-        <Button x:Name="addDir" Content="Add dir" HorizontalAlignment="Left" Margin="11,85,0,0" VerticalAlignment="Top" Click="addDir_Click"/>
-        <Button x:Name="folderSearch" Content="Search folders" HorizontalAlignment="Left" Margin="90,85,0,0" VerticalAlignment="Top" Click="folderSearch_Click"/>
-        <TextBox x:Name="fName" HorizontalAlignment="Left" Margin="191,87,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-
+        <Button x:Name="addDir" Content="Add dir" HorizontalAlignment="Left" Margin="7,303,0,0" VerticalAlignment="Top" Click="addDir_Click"/>
+        <Button x:Name="folderSearch" Content="Search folders" HorizontalAlignment="Left" Margin="75,303,0,0" VerticalAlignment="Top" Click="folderSearch_Click"/>
+        <TextBox x:Name="fName" HorizontalAlignment="Left" Margin="177,305,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="searchLbl" Content="SEARCH OPTIONS   " HorizontalAlignment="Left" Margin="10,222,0,0" VerticalAlignment="Top"/>
+        <Popup x:Name="hidddenFilesPopup" HorizontalAlignment="Center" VerticalAlignment="Top" Width="400" Height="400" IsOpen="False">
+            <StackPanel Background="Gray">
+            <Label Content="HIDDEN FILES"></Label>
+            <ListBox x:Name="hdFileList" Width="200" Height="200" MouseDoubleClick="hdFileList_MouseDoubleClick"></ListBox>
+            </StackPanel>
+            </Popup>
 
     </Grid>
 </Window>
