RecycleOption added to file delete feature

--- a/DocumentManagement/MainWindow.xaml
+++ b/DocumentManagement/MainWindow.xaml
@@ -45,6 +45,7 @@
         </TreeView>
         <CheckBox x:Name="tViewCB" Content="Use treeview" HorizontalAlignment="Left" Margin="155,39,0,0" VerticalAlignment="Top" Checked="tViewCB_Checked" Unchecked="tViewCB_Unchecked"/>
         <Button x:Name="deleteBtn" Content="Delete" HorizontalAlignment="Left" Margin="6,329,0,0" VerticalAlignment="Top" Click="deleteBtn_Click"/>
+        <CheckBox x:Name="recyclebinCB" Content="Recycle Bin" HorizontalAlignment="Left" Margin="155,67,0,0" VerticalAlignment="Top" Checked="recyclebinCB_Checked" Unchecked="recyclebinCB_Unchecked"/>
 
     </Grid>
 </Window>
