--- a/DocumentManagement/imageWindow.xaml
+++ b/DocumentManagement/imageWindow.xaml
@@ -8,6 +8,8 @@
         Title="imageWindow" Height="450" Width="800">
     <Grid>
         <Image x:Name="ImgView" HorizontalAlignment="Left" Height="232" Margin="290,116,0,0" VerticalAlignment="Top" Width="179"/>
+        <Button Content="Rotate" x:Name="rotateImage" HorizontalAlignment="Left" Margin="400,367,0,0" VerticalAlignment="Top" Click="rotateImage_Click" />
+
 
     </Grid>
 </Window>
