--- a/DocumentManagement/MainWindow.xaml
+++ b/DocumentManagement/MainWindow.xaml
@@ -47,7 +47,7 @@
         <CheckBox x:Name="tViewCB" Content="Use treeview" HorizontalAlignment="Left" Margin="155,39,0,0" VerticalAlignment="Top" Checked="tViewCB_Checked" Unchecked="tViewCB_Unchecked"/>
         <Button x:Name="deleteBtn" Content="Delete" HorizontalAlignment="Left" Margin="6,329,0,0" VerticalAlignment="Top" Click="deleteBtn_Click"/>
         <CheckBox x:Name="recyclebinCB" Content="Recycle Bin" HorizontalAlignment="Left" Margin="155,67,0,0" VerticalAlignment="Top" Checked="recyclebinCB_Checked" Unchecked="recyclebinCB_Unchecked"/>
-        <CheckBox x:Name="multiSelect" Content="Enable Multiple Select" HorizontalAlignment="Left" Margin="400,32,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked"/>
+        <CheckBox x:Name="multiSelect" Content="Enable Multiple Select" HorizontalAlignment="Left" Margin="400,32,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
