--- a/DocumentManagement/MainWindow.xaml
+++ b/DocumentManagement/MainWindow.xaml
@@ -32,7 +32,6 @@
         <Button x:Name="addDir" Content="Add dir" HorizontalAlignment="Left" Margin="7,303,0,0" VerticalAlignment="Top" Click="addDir_Click"/>
         <Button x:Name="folderSearch" Content="Search folders" HorizontalAlignment="Left" Margin="75,303,0,0" VerticalAlignment="Top" Click="folderSearch_Click"/>
         <TextBox x:Name="fName" HorizontalAlignment="Left" Margin="177,305,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="searchLbl" Content="SEARCH OPTIONS   " HorizontalAlignment="Left" Margin="10,222,0,0" VerticalAlignment="Top"/>
         <Popup x:Name="hidddenFilesPopup" HorizontalAlignment="Center" VerticalAlignment="Top" Placement="Center" Width="300" Height="300" IsOpen="False">
             <StackPanel Background="Gray">
                 <Label Content="HIDDEN FILES"></Label>
@@ -47,7 +46,7 @@
         <CheckBox x:Name="tViewCB" Content="Use treeview" HorizontalAlignment="Left" Margin="155,39,0,0" VerticalAlignment="Top" Checked="tViewCB_Checked" Unchecked="tViewCB_Unchecked"/>
         <Button x:Name="deleteBtn" Content="Delete" HorizontalAlignment="Left" Margin="6,329,0,0" VerticalAlignment="Top" Click="deleteBtn_Click"/>
         <CheckBox x:Name="recyclebinCB" Content="Recycle Bin" HorizontalAlignment="Left" Margin="155,67,0,0" VerticalAlignment="Top" Checked="recyclebinCB_Checked" Unchecked="recyclebinCB_Unchecked"/>
-        <CheckBox x:Name="multiSelect" Content="Enable Multiple Select" HorizontalAlignment="Left" Margin="400,32,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="abcOrder" Content="ASC/DESC" HorizontalAlignment="Left" Margin="375,17,0,0" VerticalAlignment="Top" Click="abcOrder_Click"/>
 
     </Grid>
 </Window>
